Fix: bets icons, bonus width on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -121,7 +121,7 @@ body {
 }
 
 .main {
-	padding-top: 30px;
+	padding: 30px 0 1px 0;
 	background-image: url(../img/background/lina.jpg);
 	background-repeat: no-repeat;
 	background-position: 0 0;
@@ -160,6 +160,8 @@ body {
 		display: flex;
 		flex-wrap: wrap;
 		width: 172px;
+		max-height: 86px;
+		overflow: hidden;
 		& > img {
 			margin: 10px;
 		}
@@ -168,10 +170,15 @@ body {
 			flex-wrap: nowrap;
 		}
 	}
-	&__mobileIcons {
-		display: none;
+	&__BetsIcons {
+		display: flex;
 		width: 105px;
+		min-height: 43px;
 		justify-content: space-around;
+		align-items: center;
+		& > img {
+			margin: 0 10px;
+		}
 	}
 	&__mobileText {
 		display: none;
@@ -393,7 +400,7 @@ body {
 		left: 50%;
 		transform: translateX(-50%);
 	}
-	&_overlay {
+	&__overlay {
 		border-radius: 30px;
 	}
 }
@@ -727,7 +734,6 @@ body {
 		&__iconsGrid {
 			flex-wrap: nowrap;
 			justify-content: flex-start;
-			overflow: hidden;
 			position: relative;
 			&:before {
 				content: "";
@@ -796,13 +802,6 @@ body {
 					justify-content: space-between;
 					flex-wrap: wrap;
 					height: 86px;
-				}
-				&__mobileIcons {
-					display: flex;
-					align-items: center;
-				}
-				&__iconsGrid_4 {
-					display: none;
 				}
 			}
 		}
@@ -899,6 +898,9 @@ body {
 	}
 	.container {
 		max-width: 540px;
+		& > .bonus {
+			max-width: 100%;
+		}
 	}
 	.bar {
 		&__item {
@@ -971,7 +973,11 @@ body {
 		}
 	}
 	.bonus {
+		&__content {
+			display: none;
+		}
 		&__btn {
+			max-height: 30px;
 			& .logo__bonus {
 				display: none;
 			}
